# BUPT-NetworkDesign

./: .gitignore  CMakeLists.txt  README.md
include/: array.h  cache.h  dns.h  hashtable.h  log.h  thpool.h
lib/: array.c  cache.c  dns.c  hashtable.c  thpool.c
src/: main.c  test_client.c
test/: array_test.c  gen_test  gen_test.c  hash_test.c  testdata.txt  testfile.txt  thpool_test.c
